--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Content-Type" content="text/html, charset=utf-8">
 	<title>Moving-Particle</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="./public/index.css">
 </head>
 <body>
 	<canvas id="canvas"></canvas>
-	<script src="index.js"></script>
+	<script src="./public/index.js"></script>
 </body>
 </html>
